; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ksyms/extr_ksyms.c_ksyms_size_permod.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ksyms/extr_ksyms.c_ksyms_size_permod.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tsizes = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @ksyms_size_permod to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ksyms_size_permod(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.tsizes*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to %struct.tsizes*
  store %struct.tsizes* %10, %struct.tsizes** %5, align 8
  %11 = load i32, i32* %3, align 4
  %12 = call i64 @LINKER_SYMTAB_GET(i32 %11, i32** %6)
  store i64 %12, i64* %8, align 8
  %13 = load i64, i64* %8, align 8
  %14 = mul i64 %13, 4
  %15 = load %struct.tsizes*, %struct.tsizes** %5, align 8
  %16 = getelementptr inbounds %struct.tsizes, %struct.tsizes* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = add i64 %17, %14
  store i64 %18, i64* %16, align 8
  %19 = load i32, i32* %3, align 4
  %20 = call i64 @LINKER_STRTAB_GET(i32 %19, i32* %7)
  %21 = load %struct.tsizes*, %struct.tsizes** %5, align 8
  %22 = getelementptr inbounds %struct.tsizes, %struct.tsizes* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 8
  %24 = sext i32 %23 to i64
  %25 = add nsw i64 %24, %20
  %26 = trunc i64 %25 to i32
  store i32 %26, i32* %22, align 8
  ret i32 0
}

declare dso_local i64 @LINKER_SYMTAB_GET(i32, i32**) #1

declare dso_local i64 @LINKER_STRTAB_GET(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
